[package]
name = "kaleido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kaleido_lib"
path = "lib/lib.rs"

[[bin]]
name = "kaleido_exe"
path = "src/kaleido/main.rs"

[[bin]]
name = "kaleido_repl"
path = "src/repl/main.rs"

[dependencies]
nom = "^7"
byteorder = "1"